--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Grupo nombre-de-grupo</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Grupo nombre-de-grupo</h1>
+      <h1>Grupo nombre-de-grupo</h1>
     </header>
     <main>
-        <section class="motivacion"></section>
-        <section class="contenido"></section>
+      <section class="motivacion"></section>
+      <section class="contenido">
+        <h2>Contenido normal</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </section>
     </main>
     <footer>
-
-        <p>Maquetado en grupo en <a href="http://adalab.es">Adalab</a></p>
-
+      <p>Maquetado en grupo en <a href="http://adalab.es">Adalab</a></p>
     </footer>
-</body>
-
+  </body>
 </html>
