add newsection branch

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
           eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
       </section>
+      <section class="contenido">
+        <h2>Contenido especial</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia porro dolor placeat omnis sapiente. Ea eligendi neque adipisci minima provident autem repudiandae, vero doloremque recusandae, assumenda repellat, pariatur asperiores cum.
+        </p>
+      </section>
+
     </main>
     <footer>
       <p>Maquetado en grupo en <a href="http://adalab.es">Adalab</a></p>
